Prevent horizontal scrollbars on code blocks

--- a/web/styles/blog.css
+++ b/web/styles/blog.css
@@ -376,6 +376,11 @@
   padding: 0 calc(((100% - 800px) / 2) + 20px);
 }
 
+.post__content pre {
+  /* Let pre blocks expand to the right side of the screen */
+  padding-right: 20px;
+}
+
 .post__content table p,
 .post__content table ul {
   margin: 0;
